...
        child: Column(
          children: [
            Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                InputField(
                    key: const Key('tituloField'),
                    controller: _titulo,
                    hintText: 'Titulo del viaje'),
                const SizedBox(height: 10),
              ],
            ),
            Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                const SizedBox(height: 10),
                InputField(
                  key: const Key('fechaIniField'),
                  controller: _fechaIni,
                  hintText: 'Fecha de inicio de viaje (DD-MM-YYYY)',
                ),
                const SizedBox(height: 10),
              ],
            ),
            Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                const SizedBox(height: 10),
                InputField(
                  key: const Key('fechaFinField'),
                  controller: _fechaFin,
                  hintText: 'Fecha de fin de viaje (DD-MM-YYYY)',
                ),
                const SizedBox(height: 10),
              ],
            ),
            Column(
              crossAxisAlignment: CrossAxisAlignment.center,
              children: [
                RoundedButton(
                  key: const Key('guardarButton'),
                  text: 'Guardar',
                  backgroundColor: Colors.white,
                  textColor: Colors.black,
                  onPressed: () async {
                    final titulo = _titulo.text.trim();
                    final ini = _parseDdMmYyyy(_fechaIni.text.trim());
...
                        'Rellena todos los campos con formato válido (DD-MM-YYYY).',
                      );
                      return;
                    }
                    if (ini.isAfter(fin)) {
                      _showError(
                        'La fecha de inicio no puede ser posterior a la final',
                      );
                      return;
                    }
                    if (titulo.length > Trip.titleMax) {
                      _showError(
                        'El título debe contener entre 1 y ${Trip.titleMax} caracteres',
...
                    if (!mounted)
                      return; // evita usar context tras async si desmonta

                    if (result is Ok<Trip>) {
                      ScaffoldMessenger.of(context).showSnackBar(
                        SnackBar(
                          key: const Key('snackbar_ok'),
                          duration: const Duration(seconds: 5),
                          content:
                              const Text('Viaje actualizado correctamente'),
                        ),
                      );

...
