...
                    title: const Text('Confirmar eliminación'),
                    content: const Text(
                      '¿Seguro que quieres eliminar este viaje?',
                    ),
                    actions: [
                      TextButton(
                        key: const Key('cancelarButton'),
                        onPressed: () => Navigator.pop(context),
                        child: const Text('Cancelar'),
                      ),
                      TextButton(
                        key: const Key('aceptarButton'),
                        onPressed: () async {
                          final tripToDelete = currentTrip;
                          final result = await widget.tripService.deleteById(
                            tripToDelete.id,
                          );
                          if (result is Ok<Unit>) {
...
